--- a/PolyGraph/PolyGraph.vcxproj.filters
+++ b/PolyGraph/PolyGraph.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="CGraph.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="CGraphOrient.th">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
