Création de la classe CAffichage et modification de CSommet

--- a/PolyGraph/PolyGraph.vcxproj
+++ b/PolyGraph/PolyGraph.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CAffichage.cpp" />
     <ClCompile Include="CArc.cpp" />
     <ClCompile Include="CGraph.cpp" />
     <ClCompile Include="CGraphOrient.cpp" />
@@ -146,6 +147,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CAffichage.h" />
     <ClInclude Include="CArc.h" />
     <ClInclude Include="CGraph.h" />
     <ClInclude Include="CGraphOrient.h" />
