--- a/PolyGraph/PolyGraph.vcxproj
+++ b/PolyGraph/PolyGraph.vcxproj
@@ -154,6 +154,9 @@
     <ClInclude Include="CSommet.h" />
     <ClInclude Include="CGraphOrient.th" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="données.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
