--- a/PolyGraph/PolyGraph.vcxproj.filters
+++ b/PolyGraph/PolyGraph.vcxproj.filters
@@ -54,4 +54,9 @@
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="données.txt">
+      <Filter>Fichiers de ressources</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
