Reprise à zéro du Parseur, pas encore terminé

--- a/PolyGraph/PolyGraph.vcxproj.filters
+++ b/PolyGraph/PolyGraph.vcxproj.filters
@@ -61,7 +61,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="données.txt">
+    <Text Include="donnees.txt">
       <Filter>Fichiers de ressources</Filter>
     </Text>
   </ItemGroup>
