--- a/PolyGraph/PolyGraph.vcxproj
+++ b/PolyGraph/PolyGraph.vcxproj
@@ -157,7 +157,7 @@
     <ClInclude Include="CGraphOrient.th" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="données.txt" />
+    <Text Include="donnees.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
