--- a/PolyGraph/PolyGraph.vcxproj
+++ b/PolyGraph/PolyGraph.vcxproj
@@ -141,8 +141,6 @@
   <ItemGroup>
     <ClCompile Include="CAffichage.cpp" />
     <ClCompile Include="CArc.cpp" />
-    <ClCompile Include="CGraph.cpp" />
-    <ClCompile Include="CGraphOrient.cpp" />
     <ClCompile Include="CParseur.cpp" />
     <ClCompile Include="CSommet.cpp" />
     <ClCompile Include="main.cpp" />
@@ -152,12 +150,17 @@
     <ClInclude Include="CArc.h" />
     <ClInclude Include="CGraph.h" />
     <ClInclude Include="CGraphOrient.h" />
+    <ClInclude Include="COperationsSurGraphe.h" />
     <ClInclude Include="CParseur.h" />
     <ClInclude Include="CSommet.h" />
     <ClInclude Include="CGraphOrient.th" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="donnees.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="CGraph.th" />
+    <None Include="COperationsSurGraphe.th" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
