--- a/PolyGraph/PolyGraph.vcxproj
+++ b/PolyGraph/PolyGraph.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CAffichage.cpp" />
+    <ClCompile Include="CGrapheDepuisFichier.cpp" />
     <ClCompile Include="CParseur.cpp" />
     <ClCompile Include="CSommet.cpp" />
     <ClCompile Include="main.cpp" />
@@ -147,6 +148,7 @@
   <ItemGroup>
     <ClInclude Include="CAffichage.h" />
     <ClInclude Include="CArc.h" />
+    <ClInclude Include="CGrapheDepuisFichier.h" />
     <ClInclude Include="PGraph.h" />
     <ClInclude Include="PGraphOrient.h" />
     <ClInclude Include="COperationsSurGraphe.h" />
