CreerGrapheOrientDepuisFichier quasi fini, logique écrite en commentaire, reste l'autre fonction à faire mais marche quasi pareil donc ça prend pas longtemps

--- a/PolyGraph/PolyGraph.vcxproj
+++ b/PolyGraph/PolyGraph.vcxproj
@@ -140,7 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CAffichage.cpp" />
-    <ClCompile Include="CGrapheDepuisFichier.cpp" />
+    <ClCompile Include="CCreateurGraphe.cpp" />
     <ClCompile Include="CParseur.cpp" />
     <ClCompile Include="CSommet.cpp" />
     <ClCompile Include="main.cpp" />
@@ -148,7 +148,7 @@
   <ItemGroup>
     <ClInclude Include="CAffichage.h" />
     <ClInclude Include="CArc.h" />
-    <ClInclude Include="CGrapheDepuisFichier.h" />
+    <ClInclude Include="CCreateurGraphe.h" />
     <ClInclude Include="PGraph.h" />
     <ClInclude Include="PGraphOrient.h" />
     <ClInclude Include="COperationsSurGraphe.h" />
