--- a/PolyGraph/PolyGraph.vcxproj
+++ b/PolyGraph/PolyGraph.vcxproj
@@ -116,6 +116,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -158,11 +159,11 @@
     <ClInclude Include="PGraphOrient.th" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="donnees.txt" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="PGraph.th" />
     <None Include="COperationsSurGraphe.th" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="donnees.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
