--- a/PolyGraph/PolyGraph.vcxproj.filters
+++ b/PolyGraph/PolyGraph.vcxproj.filters
@@ -57,16 +57,17 @@
     <ClInclude Include="CCreateurGraphe.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="donnees.txt">
-      <Filter>Fichiers de ressources</Filter>
-    </Text>
+    <ClInclude Include="CCreateurGraphe.th" />
   </ItemGroup>
   <ItemGroup>
     <None Include="COperationsSurGraphe.th">
       <Filter>Fichiers d%27en-tête</Filter>
     </None>
     <None Include="PGraph.th" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="donnees.txt">
+      <Filter>Fichiers de ressources</Filter>
+    </Text>
   </ItemGroup>
 </Project>
